# demo

./: .gitattributes  setup.cfg  setup.py
.github/workflows/: run_tests.yaml
demo/: __init__.py  _version.py  plot_data.py
demo/data/: example.txt
demo/test/: test_load_file.py
demo/utils/: load_file.py
