[metadata]
name = demo
description = demo package
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/ndilalla/demo
author_email = niccolo.dilalla@stanford.edu
author = Niccolò Di Lalla
requires_python = >=3

classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: POSIX
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Astronomy

project_urls =
    Bug Tracker = https://github.com/ndilalla/demo/issues
    Source Code = https://github.com/ndilalla/demo


[options]
packages = find:
install_requires =
    matplotlib
    numpy

tests_require =
    pytest


[versioneer]
VCS=git
style=pep440
versionfile_source=demo/_version.py
versionfile_build=demo/_version.py
tag_prefix=v
parentdir_prefix=demo-